adds boiler plate and basic table html to index.html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     
 </head>
 <body>
-    
+    <nav></nav>
+    <main>
+        <div class="tv">
+            <img src="./images/tv" alt="1950 style tv image" class="tv-img">
+            <button class="previous tv-button"></button>
+            <img src="" alt="" class="tv-play-img">
+            <button class="next tv-button"></button>
+        </div>
+
+        <div class="channel-guide">
+            <table class="channel-table">
+                <tr class="channel-guide-table-header">
+                    <th scope="col" class="channel-header">Channel</th>
+                    <th scope="col" class="episode-header">Episodes</th>
+                </tr>
+                <tr class="episode-0-table">
+                    <td class="episode-0">0</td>
+                    <td class="episode-0-name">Hey Hey, I'm Charle Rae</td>
+                </tr>
+                <tr class="episode-1-table">
+                    <td class="episode-1">1</td>
+                    <td class="episode-1-name">Reddit Client Project</td>
+                </tr>
+                <tr class="episode-2-table">
+                    <td class="episode-2">2</td>
+                    <td class="episode-2-name">E-Commerce Project</td>
+                </tr>
+                <tr class="episode-3-table">
+                    <td class="episode-3">3</td>
+                    <td class="episode-3-name">PERN Project</td>
+                </tr>
+            </table>
+        </div>
+    </main>
 </body>
 </html>
+
