link stylesheet and boilerplate css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charle Rae Tech</title>
-    
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
     <nav></nav>
     <main>
         <div class="tv">
-            <img src="./images/tv" alt="1950 style tv image" class="tv-img">
+            <img src="https://previews.123rf.com/images/ginosphotos/ginosphotos1210/ginosphotos121000178/15673664-1950-%EB%85%84%EB%8C%80%EC%97%90%EC%84%9C-%EB%B9%88%ED%8B%B0%EC%A7%80-tv-%ED%9D%B0%EC%83%89-%EB%B0%B0%EA%B2%BD-%EC%9C%84%EC%97%90-%EC%A0%88%EC%97%B0.jpg" alt="1950 style tv image" class="tv-img">
             <button class="previous tv-button"></button>
             <img src="" alt="" class="tv-play-img">
             <button class="next tv-button"></button>
